# TarnaBot

./: .gitmodules  .qmake.stash  .travis.yml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Makefile  PULL_REQUEST_TEMPLATE.md  README  README.md  TBFramework.pro  TarnaBot.pro  passporttypes.h
doc/: Doxyfile  api.md  articles.dox
docs/: Doxyfile  index.md
examples/TarnaEchoBot/: TarnaEchoBot.pro  handler.cpp  handler.h  main.cpp
examples/TarnaRegisterationBot/: TarnaRegisterationBot.pro  manager.cpp  manager.h
examples/TarnaWeatherBot/: TarnaWeatherBot.pro  main.cpp
examples/build-TarnaEchoBot-Desktop-Debug/: TarnaEchoBot
include/: Animation  Audio  CallbackGame  CallbackQuery  Chat  ChatMember  ChatPhoto  ChosenInlineResult  Contact  Document  EncryptedCredentials  EncryptedPassportElement  File  ForceReply  Game  GameHighScore  InlineKeyboardButton  InlineKeyboardMarkup  InlineQuery  InlineQueryResult  InlineQueryResultArticle  InlineQueryResultAudio  InlineQueryResultCachedAudio  InlineQueryResultCachedDocument  InlineQueryResultCachedGif  InlineQueryResultCachedMpeg4Gif  InlineQueryResultCachedPhoto  InlineQueryResultCachedSticker  InlineQueryResultCachedVideo  InlineQueryResultContact  InlineQueryResultDocument  InlineQueryResultGame  InlineQueryResultGif  InlineQueryResultLocation  InlineQueryResultMpeg4Gif  InlineQueryResultPhoto  InlineQueryResultVenue  InlineQueryResultVideo  InlineQueryResultVoice  InputContactMessageContent  (+163 more)
include/tarnabot/objects/: telegramobject.hpp  user.hpp
src/: CMakeLists.txt  animation.cpp  audio.cpp  callbackgame.cpp  callbackquery.cpp  chat.cpp  chatmember.cpp  chatphoto.cpp  choseninlineresult.cpp  contact.cpp  document.cpp  encryptedcredentials.cpp  encryptedpassportelement.cpp  file.cpp  forcereply.cpp  game.cpp  gamehighscore.cpp  inlinekeyboardbutton.cpp  inlinekeyboardmarkup.cpp  inlinequery.cpp  inlinequeryresult.cpp  inlinequeryresultarticle.cpp  inlinequeryresultaudio.cpp  inlinequeryresultcachedaudio.cpp  inlinequeryresultcacheddocument.cpp  inlinequeryresultcachedgif.cpp  inlinequeryresultcachedmpeg4gif.cpp  inlinequeryresultcachedphoto.cpp  inlinequeryresultcachedsticker.cpp  inlinequeryresultcachedvideo.cpp  inlinequeryresultcachedvoice.cpp  inlinequeryresultcontact.cpp  inlinequeryresultdocument.cpp  inlinequeryresultgame.cpp  inlinequeryresultgif.cpp  inlinequeryresultlocation.cpp  inlinequeryresultmpeg4gif.cpp  inlinequeryresultphoto.cpp  inlinequeryresultvenue.cpp  inlinequeryresultvideo.cpp  (+65 more)
tests/: CMakeLists.txt  usertest.cpp
